# forestai-ai-agent

frontend/: README.md  app.js  index.html  styles.css
geoai/agents/agentgoogle/: Dockerfile  README.md  agent.py  pyproject.toml  requirements.txt  server.py  tools.py
geoai/agents/agenthelloworld/: Dockerfile  agent.py  requirements.txt  server.py  tools.py
