[project]
name = "geoai-google-agent"
version = "0.1.0"
description = "GeoAI agent using Google ADK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk==1.12.0",
    "python-dotenv==1.0.0",
    "httpx>=0.25.0",
    "google-auth>=2.23.0",
    "litellm==1.17.22",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "ruff==0.1.6",
]
